test/files/neg/badtok-1.check
badtok-1.scala:3: error: unclosed character literal (or use " not ' for string literal)
'42'
^
badtok-1.scala:3: error: unclosed character literal (or use " not ' for string literal)
'42'
   ^
badtok-1.scala:7: error: empty character literal (use '\'' for single quote)
'''
^
badtok-1.scala:7: error: unclosed character literal (or use " not ' for string literal)
'''
  ^
badtok-1.scala:9: error: empty character literal
'';
^
badtok-1.scala:12: error: unclosed character literal (or use " for string literal "''abc")
'abc'
    ^
badtok-1.scala:14: error: unclosed character literal (or use " for string literal "utf_8")
'utf_8'
      ^
badtok-1.scala:16: error: unclosed character literal (or use " not ' for string literal)
'utf-8'
      ^
badtok-1.scala:18: error: unclosed character literal
'
^
badtok-1.scala:12: error: expected class or object definition
'abc'
^
10 errors found
